- add code to ZMAjaxController to allow using method injection
- handle generic properties (ZMObject) in BeanUtils::obj2map if properties are
  explicitely set
- fix bug in generic getXXX()/setXXX() code in ZMObject
- change setting isEnableZenMagick to isEnableZMThemes to make it clearer what
  the setting actually does; also some code changes to exclude more code and
	leave admin working ;)

Release 0.9.4.1
- add support for DB transactions in controller code [ZMController::process()]
- add ZMDatabase::getConfig() to allow to retreive the db configuration
- add ZMDbUtils::resolveSQLFilename(..) to allow loading of DB driver specific
  SQL from files following the convention [name]-[driver].sql; example:
	install-mysql.sql
- fix SQL patch spelling mistake that breaks installing ZenMagick SQL; b:#2487507
- fix broken ZMProducts::getProductForModel(); b:#2487519
- use new ZMDbUtils::resolveSQLFilename() method in plugins that require SQL
- fix catalog manager's product list
- fix zen_href_link override to use the toolbox if available to re-enable SEO
  for code that still uses this function
- fix catalog manager warning that shows up if no plugins installed; b:#2497431
- fix getManufacturerForId broken if id parameter empty or null; b:#2497461
- do not show Plugins menu item for catalog manager plugins; b:#2497486
- use preg_xxx instead of ereg_xxx
 -remove unused and undocumented parameter from ZMAjaxController::toJSON()
 - remove core/ext/JSON.php and use native 5.2.x json methods instead
 - upgrade zm_firephp to FirePHP 0.2.1

Release 0.9.4
- prepend log messages with log level labels
- change ZMCache signature; updated all cache using plugnis!
- fix zm_site_switch: sql created different column than code expects! b:#2384579
- use configured themeId to lookup static contents and boxes layout info;
  [this will make a difference only if the theme id is explicitely set using
	ZMRuntime::seThemeId(...)]
- decouple cache type from actual implementation