@@ -400,7 +400,8 @@ class ZMProducts extends ZMObject {
         }
 
         $sql = "SELECT p.*, pd.*, s.specials_new_products_price
-                FROM " . TABLE_PRODUCTS . " p LEFT JOIN " . TABLE_SPECIALS . " s ON (s.products_id = p.products_id AND s.status = 1), 
+                FROM " . TABLE_PRODUCTS . " p 
+                LEFT JOIN " . TABLE_SPECIALS . " s ON (s.products_id = p.products_id AND s.status = 1), 
                 " . TABLE_PRODUCTS_DESCRIPTION . " pd
                 WHERE p.products_status = '1'
                   AND p.products_model = :model
@@ -434,7 +435,8 @@ class ZMProducts extends ZMObject {
         }
 
         $sql = "SELECT p.*, pd.*, s.specials_new_products_price
-                FROM " . TABLE_PRODUCTS . " p LEFT JOIN " . TABLE_SPECIALS . " s ON (s.products_id = p.products_id AND s.status = 1), 
+                FROM " . TABLE_PRODUCTS . " p 
+                LEFT JOIN " . TABLE_SPECIALS . " s ON (s.products_id = p.products_id AND s.status = 1), 
                 " . TABLE_PRODUCTS_DESCRIPTION . " pd
                 WHERE p.products_id = :productId
                   AND pd.products_id = p.products_id
@@ -479,7 +481,8 @@ class ZMProducts extends ZMObject {
 
         if (0 < count($needLoadIds)) {
             $sql = "SELECT p.*, pd.*, s.specials_new_products_price
-                    FROM " . TABLE_PRODUCTS . " p LEFT JOIN " . TABLE_SPECIALS . " s ON (s.products_id = p.products_id AND s.status = 1), 
+                    FROM " . TABLE_PRODUCTS . " p 
+                    LEFT JOIN " . TABLE_SPECIALS . " s ON (s.products_id = p.products_id AND s.status = 1), 
                     " . TABLE_PRODUCTS_DESCRIPTION . " pd
                     WHERE p.products_id in (:productId)
                       AND pd.products_id = p.products_id
